Add 2D 32x32 tests